force-app/main/default/objects/MS_Graph_Subscription__c/MS_Graph_Subscription__c.object-meta.xml
<CustomObject>
    <label>Microsoft Graph Subscription</label>
    <nameField>
        <displayFormat>MGS-{000000}</displayFormat>
        <label>Subscription Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Microsoft Graph Subscriptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>