force-app/main/default/objects/MS_Graph_Subscription__c/fields/Client_State_Hash__c.field-meta.xml
<CustomField>
    <fullName>Client_State_Hash__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Client State Hash</label>
    <length>64</length>
    <required>true</required>
    <type>Text</type>
</CustomField>