force-app/main/default/objects/MS_Graph_Subscription__c/fields/Expiration__c.field-meta.xml
<CustomField>
    <fullName>Expiration__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Expiration</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>