force-app/main/default/objects/MS_Graph_Subscription__c/fields/Graph_Subscription_ID__c.field-meta.xml
<CustomField>
    <fullName>Graph_Subscription_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Graph Subscription ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>