force-app/main/default/objects/MS_Graph_Subscription__c/fields/Lifecycle_URL__c.field-meta.xml
<CustomField>
    <fullName>Lifecycle_URL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Lifecycle URL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>