force-app/main/default/objects/MS_Graph_Subscription__c/fields/Meeting_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Meeting Schedule</label>
    <referenceTo>MS_Team_Call_Schedule__c</referenceTo>
    <relationshipLabel>Graph Subscriptions</relationshipLabel>
    <relationshipName>Graph_Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>