force-app/main/default/objects/MS_Graph_Subscription__c/fields/Resource__c.field-meta.xml
<CustomField>
    <fullName>Resource__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Graph Resource</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>